Jar Run Command
Added PowerShell command for running java JAR files