@@ -1,1 +1,3 @@
 # GameOfLife
+## Command for running Java Jar files from PowerShell
+### java -jar --module-path "JAVA FX lIBRARY Path" --add-modules javafx.controls,javafx.fxml .\GameOfLife.jar
